# open-cis

./: .env.example  .gitignore  CLAUDE.md  CONTEXT.md  README.md  docker-compose.override.yml  docker-compose.yml
.claude/commands/: resolve-code-review-comments.md
.github/workflows/: backend-ci.yml  frontend-ci.yml
api/: Dockerfile  pyproject.toml  railway.toml
api/prisma/: schema.prisma
api/prisma/migrations/20260102200933_init/: migration.sql
api/prisma/migrations/20260103004644_add_soft_delete_to_patients/: migration.sql
api/prisma/migrations/20260103013206_add_encounters/: migration.sql
api/scripts/: upload_templates.py
api/src/: config.py  dependencies.py  main.py
api/src/db/: client.py
api/src/ehrbase/: client.py  compositions.py  queries.py  templates.py
api/src/encounters/: __init__.py  router.py  schemas.py  service.py
api/src/medications/: router.py  schemas.py  service.py
api/src/observations/: router.py  schemas.py  service.py
api/src/patients/: repository.py  router.py  schemas.py  service.py
api/templates/: open-cis.vital-signs.v1.opt
api/tests/: conftest.py  test_ehrbase.py  test_patients.py
docs/adr/: 0000-record-architecture-decisions.md  0001-openehr-template-management.md  (+6 more)
ehrbase/: Dockerfile  railway.toml  wait-for-db.sh
ehrbase-db/: Dockerfile  railway.toml
scripts/: seed.py  seed_staging.py  setup.sh
web/: .env.production  .eslintrc.cjs  Dockerfile  eslint.config.js  index.html  nixpacks.toml  package-lock.json  package.json  pnpm-lock.yaml  railway.toml  tailwind.config.js  vite.config.ts
web/src/: App.vue
(+27 files in other folders)
